icon buttons z-index fix

--- a/src/scss/components/_icon-button.scss
+++ b/src/scss/components/_icon-button.scss
@@ -40,6 +40,8 @@
     }
 
     &__icon {
+        position: relative;
+        z-index: 100;
         width: 100%;
         height: 100%;
     }
